# multiagent

./: README.md  requirements.txt
ma/: .env_example  README.md  pyproject.toml
ma/src/ma/: crew.py  main.py
ma1/: .env_example  README.md  pyproject.toml
ma1/src/ma1/: crew.py  main.py
ma1/src/ma1/config/: agents.yaml  tasks.yaml
ma2/: .env_example  README.md  pyproject.toml
ma2/src/ma2/: crew.py  main.py
ma3/: .env_example  README.md  pyproject.toml
ma3/src/ma3/: crew.py  main.py
ma4/: README.md  pyproject.toml
ma4/chromadb/: docker-compose.yml
ma4/mysql/: docker-compose.yml
ma4/src/ma4/: chromaragstorage.py  crew.py  main.py
ma4/src/ma4/tools/: custom_tool.py
ma5/: README.md  pyproject.toml
ma5/src/ma5/: chromaragstorage.py  crew.py  knowledgestorage.py  ltmmysqlstorage.py  main.py
