[project]
name = "ma"
version = "0.1.0"
description = "ma using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai>=0.108.0,<1.0.0",
]

[project.scripts]
ma = "ma.main:run"
run_crew = "ma.main:run"
train = "ma.main:train"
replay = "ma.main:replay"
test = "ma.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
