[project]
name = "ma2"
version = "0.1.0"
description = "ma2 using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai>=0.108.0,<1.0.0",
]

[project.scripts]
ma2 = "ma2.main:run"
run_crew = "ma2.main:run"
train = "ma2.main:train"
replay = "ma2.main:replay"
test = "ma2.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
