[project]
name = "ma4"
version = "0.1.0"
description = "ma4 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
    "mysql-connector-python==9.3.0",
    "chromadb==0.5.23",
]

[project.scripts]
ma4 = "ma4.main:run"
run_crew = "ma4.main:run"
train = "ma4.main:train"
replay = "ma4.main:replay"
test = "ma4.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
